TOC on iOS Fix Attempt 1
Use Z transform

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -107,7 +107,8 @@ body, input, textarea, select {
 }
 
 #links.affix {
-  position: sticky;
+  position: fixed;
+  transform: translateZ(0);
 }
 
 #header-wrapper {
